--- a/.github/workflows/GenerateSnake.yml
+++ b/.github/workflows/GenerateSnake.yml
@@ -18,7 +18,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
-          outputs: |
+          svg_out_path: |
             ./assets/github-contribution-grid-snake.svg
             ./assets/github-contribution-grid-snake-dark.svg?palette=github-dark
 
