--- a/.github/workflows/GenerateSnake.yml
+++ b/.github/workflows/GenerateSnake.yml
@@ -18,9 +18,7 @@ jobs:
         id: snake-gif
         with:
           github_user_name: ${{ github.repository_owner }}
-          svg_out_path: |
-            ./assets/github-contribution-grid-snake.svg
-            ./assets/github-contribution-grid-snake-dark.svg?palette=github-dark
+          svg_out_path: assets
 
       - name: Push to GitHub
         uses: EndBug/add-and-commit@v7.2.1
